testsuite/tests/v1/bin_op/arith/divide/div_by_zero/test.out
Error: Division by zero
   ╭─[ <working-dir>/script.lkql:4:7 ]
   │
 4 │ print(x / y)
   │       ──┬──  
   │         ╰──── Cannot perform a division by zero
───╯
